--- a/Mod-40/products/src/main/resources/application.properties
+++ b/Mod-40/products/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=products
 spring.datasource.url=jdbc:postgresql://localhost:5432/product
-spring.datasource.username=candido
+spring.datasource.username=david
 spring.datasource.password=2704
 
 spring.datasource.driver-class-name=org.postgresql.Driver
